# mcp-privilege-cloud

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  INSTRUCTIONS.md  Pipfile  README.md  SERVER_CAPABILITIES.md  TASK_LIST.md  TROUBLESHOOTING.md  debug_platform_api.py  diagnose.py  pyproject.toml  pytest.ini  requirements.txt  run_server.bat  run_server.py  run_server_windows.py  sample_multiple_platform_details.json  sample_platform_details_response.json  sample_platforms_list_response.json  start_for_inspector.py  test_fixed_server.py  test_inspector_simulation.py  test_mcp_cli.py  test_mvp.py  verify_pagination.py
.github/workflows/: test.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: coding_standards_and_patterns.md  config_centralization_code_examples.md  config_centralization_implementation_details.md  configuration_centralization_plan.md  mcp_server_standardization_solution.md  project_purpose_and_stack.md  suggested_commands.md  task_completion_checklist.md
docs/: API_REFERENCE.md  APPLICATIONS_SERVICE_RESEARCH.md  ARCHITECTURE.md  DEVELOPMENT.md  MCP_SERVER_MODERNIZATION_PLAN.md  MIGRATION_GUIDE.md  PASSWORD_MANAGEMENT_IMPLEMENTATION_PLAN.md  RESOURCES.md  TESTING.md  TROUBLESHOOTING.md  URI_SCHEMA.md  implementation-plan-mcp-prompts.md  implementation-plan-mcp-resources.md  implementation-plan-mcp-schema-tool-definitions-simplified.md  implementation-plan-mcp-schema-tool-definitions.md  implementation-plan-mcp-schema-ultra-simple.md  implementation-plan-tool-parameter-validation.md  pcloud-service-expansion-plan.md  platform-resource-performance-optimization.md  platform_enhancement_implementation_plan.md  resources-to-tools.md
docs/development/: DEVELOPMENT_PLAN.md  MCP_INSPECTOR_GUIDE.md  QUICK_START.md  SERVER_CAPABILITIES.md  TASK_LIST.md
src/cyberark_mcp/: __init__.py  __main__.py  auth.py  mcp_server.py  server.py
src/mcp_privilege_cloud/: __init__.py  __main__.py  exceptions.py  mcp_server.py  models.py  sdk_auth.py  server.py
src/mcp_privilege_cloud/resources/: __init__.py  accounts.py  base.py  platforms.py  registry.py  safes.py  system.py
src/mcp_privilege_cloud/services/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_account_mgmt.py  test_account_operations.py  test_applications_service.py  test_auth.py  test_context_injection.py  test_core_functionality.py  test_create_account_mcp.py  test_enhanced_error_handling.py  test_enhanced_error_messages.py  test_integration.py  test_integration_tools.py  test_lifespan.py  test_mcp_integration.py  test_mcp_platform_tools.py  test_performance.py  test_platform_mgmt.py  test_resources.py  test_response_models.py  test_safe_management_mcp.py  test_server.py  test_tools.py  test_typed_tools.py
